--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "classnames": "^2.2.6",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^5.1.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -15,6 +19,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.7.0",
     "react-app-rewire-stylus-modules": "0.0.2",
     "react-app-rewired": "^1.5.2",
     "stylus": "^0.54.5",
