--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
+    "build:test": "cross-env REACT_APP_ENV=production.test PUBLIC_URL=//testUrl react-app-rewired build",
+    "build:preprod": "cross-env REACT_APP_ENV=production.preprod PUBLIC_URL=//prodUrl react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
